--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,13 @@ h2 {
   flex-direction: column;
 }
 
+.title {
+  display: flex;
+  align-items: center;
+}
+
 .docs {
+  margin-left: 24px;
 }
 
 .charts {
