--- a/src/styles.css
+++ b/src/styles.css
@@ -24,7 +24,7 @@ h2 {
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 50% 50%;
   grid-auto-rows: 300px;
 }
 
